Solutions | Extra Lab Data Types Extra

--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -53,7 +53,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "# Prompt the user to enter their personal information\n",
+    "name = input(\"Enter your name: \")\n",
+    "age = input(\"Enter your age: \")\n",
+    "address = input(\"Enter your address: \")\n",
+    "salary = input(\"Enter your salary: \")\n",
+    "expenses = input(\"Enter your expenses: \")\n",
+    "\n",
+    "# Convert the entered data to appropriate types\n",
+    "age = int(age)\n",
+    "salary = float(salary)\n",
+    "expenses = float(expenses)\n",
+    "\n",
+    "# Calculate the remaining salary after expenses\n",
+    "remaining_salary = salary - expenses\n",
+    "\n",
+    "# Round the remaining salary to one decimal place\n",
+    "remaining_salary = round(remaining_salary, 1)\n",
+    "\n",
+    "# Check if the remaining salary is greater than or equal to $500\n",
+    "is_salary_good = remaining_salary >= 500\n",
+    "\n",
+    "# Use string formatting to print the final message\n",
+    "message = f\"{name}, who is {age} years old, and lives in {address} has {remaining_salary} dollars left from her salary after expenses. It is {is_salary_good} that she has more than $500 left.\"\n",
+    "\n",
+    "print(message)\n",
+    "\n"
    ]
   },
   {
@@ -102,11 +129,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the new string: 259\n",
+      "['some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'some', 'say', 'in', 'ice', 'from', 'what', 'i’ve', 'tasted', 'of', 'desire', 'i', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'but', 'if', 'it', 'had', 'to', 'perish', 'twice', 'i', 'think', 'i', 'know', 'enough', 'of', 'hate', 'to', 'say', 'that', 'for', 'destruction', 'ice', 'is', 'also', 'great', 'and', 'would', 'suffice', 'python', 'is', 'awesome!']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "# Original poem\n",
+    "poem = \"\"\"Some say the world will end in fire,\n",
+    "Some say in ice.\n",
+    "From what I’ve tasted of desire\n",
+    "I hold with those who favor fire.\n",
+    "But if it had to perish twice,\n",
+    "I think I know enough of hate\n",
+    "To say that for destruction ice\n",
+    "Is also great\n",
+    "And would suffice.\"\"\"\n",
+    "\n",
+    "# Remove punctuation and convert to lowercase\n",
+    "cleaned_poem = poem.translate(str.maketrans('', '', string.punctuation)).lower()\n",
+    "\n",
+    "# Concatenate with the string \"python is awesome!\"\n",
+    "new_string = cleaned_poem + \" python is awesome!\"\n",
+    "\n",
+    "# Print the length of the new string\n",
+    "print(f\"Length of the new string: {len(new_string)}\")\n",
+    "\n",
+    "# Split the string into a list of words\n",
+    "poem_list = new_string.split()\n",
+    "\n",
+    "# Print the list\n",
+    "print(poem_list)\n"
    ]
   }
  ],
@@ -126,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
